--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <h3 class="pricing__tab-titles">Gym Membership</h3>
           </li>
           <li class="pricing__tab" js--tab="pt">
-            <h3 class="pricing__tab-titles">PT ant Nutrition</h3>
+            <h3 class="pricing__tab-titles">PT and Nutrition</h3>
           </li>
           <li class="pricing__tab" js--tab="massage">
             <h3 class="pricing__tab-titles">Sports Massage</h3>
